creo mi primer commit en la rama cabecera y agrego una imagen a la pagina

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>demostrando Git</title>
     <link rel="icon" href="imagenes/icongit.png" />
+    <LINK rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-    
+    <img src="imagenes/Mi_Hyundai-Veloster-.webp" width="800px"/>
+    <p> hoy es un dia genial en el cual estoy avanzando 
+        en mi pagina web 
+    </p>
 </body>
 </html>
